--- a/SITE_IPHONE/index.html
+++ b/SITE_IPHONE/index.html
@@ -24,7 +24,7 @@
                     <li><a href="pages/modelos.html">Modelos</a></li>
                     <li><a href="pages/fotos.html">Fotos</a></li>
                     <li><a href="pages/videos.html">Vídeos</a></li>
-                    <li><a href="https://ww.apple.com" target="_blank">Site oficial</a></li>
+                    <li><a href="https://www.apple.com" target="_blank">Site oficial</a></li>
                 </ul>
             </nav>
         </div>
