--- a/SITE_IPHONE/pages/fotos.html
+++ b/SITE_IPHONE/pages/fotos.html
@@ -7,8 +7,10 @@
     <title>Iphone</title>
     <link rel="stylesheet" href="../CSS/style.css"> <!-- ../ sobe o nivel da pasta -->
     <link rel="stylesheet" href="../plugins/bxslider.css">
+    <link rel="stylesheet" href="../plugins/magnific-popup.css">
     <script src="../plugins/jquery.min.js"></script>
     <script src="../plugins/bxslider.min.js"></script>
+    <script src="../plugins/magnific-popup.js"></script>
     <script src="../js/scripts.js"></script>
 </head> 
 
@@ -40,57 +42,19 @@
         </div>  
     </div>
 
-    <section id="modelos">
-        <h2 class="titulo">Modelos</h2>
+    <section id="fotos">
+        <h2 class="titulo">Fotos</h2>
         <div class="container">
             
-            <div>
-                <img src="../imagens/iphones/iphone_13_pro.jpg" alt="iPhone 13 Pro">
-                <h3>iPhone 13 Pro</h3>
-                <ul>
-                    <li>Tela OLED sem bordas com ProMotion de 6,7 pol. ou 6,1 pol.</li>
-                    <li>Sistema de câmera Pro. Teleobjetiva, grande-angular e ultra-angular</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
+            <a href="../imagens/fotos/fotosg/foto01.jpg"><img src="../imagens/fotos/fotosp/foto01.jpg" alt=""></a> <!-- ao clicar abre a foto grande -->
+            <a href="../imagens/fotos/fotosg/foto02.jpg"><img src="../imagens/fotos/fotosp/foto02.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto03.jpg"><img src="../imagens/fotos/fotosp/foto03.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto04.jpg"><img src="../imagens/fotos/fotosp/foto04.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto05.jpg"><img src="../imagens/fotos/fotosp/foto05.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto06.jpg"><img src="../imagens/fotos/fotosp/foto06.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto07.jpg"><img src="../imagens/fotos/fotosp/foto07.jpg" alt=""></a>
+            <a href="../imagens/fotos/fotosg/foto08.jpg"><img src="../imagens/fotos/fotosp/foto08.jpg" alt=""></a>
 
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>    
-            
-            <div>
-                <img src="../imagens/iphones/iphone_13.jpg" alt="iPhone 13">
-                <h3>iPhone 13</h3>
-                <ul>
-                    <li>Tela OLED sem bordas de 6,1 pol. ou 5,4 pol.</li>
-                    <li>Sistema avançado de câmera dupla</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
-
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
-
-            <div>
-                <img src="../imagens/iphones/iphone_12.jpg" alt="iPhone 12">
-                <h3>iPhone 12</h3>
-                <ul>
-                    <li>Tela OLED sem bordas de 6,1 pol. ou 5,4 pol.</li>
-                    <li>Sistema de câmera dupla</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
-
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
-
-            <div>
-                <img src="../imagens/iphones/iphone_se.jpg" alt="iPhone SE">
-                <h3>iPhone SE (3º geração)</h3>
-                <ul>
-                    <li>Tela LCD</li>
-                    <li>Sistema de câmera única</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
-
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
 
         </div>
     </section>
