--- a/SITE_IPHONE/pages/videos.html
+++ b/SITE_IPHONE/pages/videos.html
@@ -7,8 +7,10 @@
     <title>Iphone</title>
     <link rel="stylesheet" href="../CSS/style.css"> <!-- ../ sobe o nivel da pasta -->
     <link rel="stylesheet" href="../plugins/bxslider.css">
+    <link rel="stylesheet" href="../plugins/magnific-popup.css">
     <script src="../plugins/jquery.min.js"></script>
     <script src="../plugins/bxslider.min.js"></script>
+    <script src="../plugins/magnific-popup.js"></script>
     <script src="../js/scripts.js"></script>
 </head> 
 
@@ -40,57 +42,17 @@
         </div>  
     </div>
 
-    <section id="modelos">
-        <h2 class="titulo">Modelos</h2>
+    <section id="videos">
+        <h2 class="titulo">Vídeos</h2>
         <div class="container">
             
-            <div>
-                <img src="../imagens/iphones/iphone_13_pro.jpg" alt="iPhone 13 Pro">
-                <h3>iPhone 13 Pro</h3>
-                <ul>
-                    <li>Tela OLED sem bordas com ProMotion de 6,7 pol. ou 6,1 pol.</li>
-                    <li>Sistema de câmera Pro. Teleobjetiva, grande-angular e ultra-angular</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/thSPGPnuuNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <!--pegar o conteudo de outro site e inserir-->
 
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>    
-            
-            <div>
-                <img src="../imagens/iphones/iphone_13.jpg" alt="iPhone 13">
-                <h3>iPhone 13</h3>
-                <ul>
-                    <li>Tela OLED sem bordas de 6,1 pol. ou 5,4 pol.</li>
-                    <li>Sistema avançado de câmera dupla</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/McBM68pU2Xc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8T8bwzqx4dU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-            <div>
-                <img src="../imagens/iphones/iphone_12.jpg" alt="iPhone 12">
-                <h3>iPhone 12</h3>
-                <ul>
-                    <li>Tela OLED sem bordas de 6,1 pol. ou 5,4 pol.</li>
-                    <li>Sistema de câmera dupla</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
-
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
-
-            <div>
-                <img src="../imagens/iphones/iphone_se.jpg" alt="iPhone SE">
-                <h3>iPhone SE (3º geração)</h3>
-                <ul>
-                    <li>Tela LCD</li>
-                    <li>Sistema de câmera única</li>
-                    <li>Chip A15 Bionic</li>
-                </ul>
-
-                <a href="#" class="but-comprar">Comprar</a>
-            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/P-Fvx-UKnd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         </div>
     </section>
